frontend/deploy/kustomize/components/admin/admin_deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dinner-done-better-admin-app-deployment
  labels:
    app: dinner-done-better-admin-app
    app.kubernetes.io/name: dinner-done-better-admin-app
spec:
  selector:
    matchLabels:
      app: dinner-done-better-admin-app
      app.kubernetes.io/name: dinner-done-better-admin-app
  replicas: 1
  template:
    metadata:
      labels:
        app: dinner-done-better-admin-app
        app.kubernetes.io/name: dinner-done-better-admin-app
    spec:
      containers:
        - name: dinner-done-better-admin-app
          image: dinner-done-better-admin-app
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - name: "config"
              mountPath: "/app/apps/web/config.json"
              subPath: "config.json"
          ports:
            - containerPort: 7000
              name: http
          livenessProbe:
            httpGet:
              path: "/api/_meta_/live"
              port: 7000
            initialDelaySeconds: 15
            periodSeconds: 52
          readinessProbe:
            httpGet:
              path: "/api/_meta_/ready"
              port: 7000
            initialDelaySeconds: 15
            periodSeconds: 5
      volumes:
        # this volume contains the configuration file for the API service
        - name: "config"
          configMap:
            name: "frontend-service-config"
---
