frontend/deploy/kustomize/components/admin/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dinner-done-better-admin-app-deployment
  labels:
    app: dinner-done-better-admin-app
    app.kubernetes.io/name: dinner-done-better-admin-app
spec:
  selector:
    matchLabels:
      app: dinner-done-better-admin-app
      app.kubernetes.io/name: dinner-done-better-admin-app
  replicas: 1
  template:
    metadata:
      labels:
        app: dinner-done-better-admin-app
        app.kubernetes.io/name: dinner-done-better-admin-app
    spec:
      containers:
      - name: dinner-done-better-admin-app
        image: dinner-done-better-admin-app
        imagePullPolicy: IfNotPresent
        volumeMounts:
          - name: logs
            mountPath: /var/log/application
        ports:
        - containerPort: 7000
          name: http
        livenessProbe:
          httpGet:
            path: "/api/_meta_/live"
            port: 7000
          initialDelaySeconds: 15
          periodSeconds: 32
        readinessProbe:
          httpGet:
            path: "/api/_meta_/ready"
            port: 7000
          initialDelaySeconds: 15
          periodSeconds: 3
        # This is the OpenTelemetry collector sidecar
      - name: opentelemetry-collector
        image: otel/opentelemetry-collector-contrib:0.115.1
        command:
          - "/otelcol-contrib"
          - "--config"
          - "/conf/config.yaml"
        ports:
          - containerPort: 4317
            name: otel1
          - containerPort: 4318
            name: otel2
          - containerPort: 13313
            name: health
        volumeMounts:
          - name: logs
            mountPath: /var/log/application
            readOnly: true
          - name: opentelemetry-config
            mountPath: /conf
      volumes:
        # this volume is where we write logs to in the API, and where we read logs from in the collector.
        - name: logs
          emptyDir:
            sizeLimit: 500Mi
        # this volume contains the configuration file for the OTel collector.
        - name: opentelemetry-config
          configMap:
            name: opentelemetry-collector-config
---
