frontend/deploy/kustomize/components/admin/admin_service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: dinner-done-better-admin-app-svc
  labels:
    app.kubernetes.io/name: dinner-done-better-admin-app
spec:
  selector:
    app.kubernetes.io/name: dinner-done-better-admin-app
  ports:
    - name: http
      port: 7000
      protocol: TCP
      targetPort: http
  type: ClusterIP
---
